Changes 1.) Updated README.md 2.) Fixed Broken Build with Java OPTS - made java > 9 compatible - addition of VM args --add-opens java.base/java.lang=ALL-UNNAMED